fixed file structure. made modal visible again. adjusted wallpaper and santa img placement.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text|Roboto');
+/* index.html */
 /* Body & container */
 
 * {
@@ -9,16 +10,19 @@
 
 body {
 	font-family: "Crimson";
-    max-height: 100vh;
-    color: black;
+  max-height: 100vh;
+  max-width: 1300px;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("./images/wallpaper66.jpg");
 }
 
-.container {
+.container1 {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 2fr 1fr;
 	padding: 15px;
-    
 }
 
 
@@ -31,24 +35,33 @@ body {
 }
 
 .name {
-    padding:15px;
-    color: white;
+    padding: 25px;
+    padding-top: 30px;
+    padding-right: 50px;
+    padding-left: 50px;
     font-size: 3rem;
     float: left;
-    margin-top: 100px;   
+    margin-top: 80px;
+    margin-left: 450px;    
+    background: beige;
+    border: 3px solid #006622;
+    color: #b30000;
+    border-radius: 10px;       
 }
 
+
 .santa {
-    max-height: 225px;
+    max-height: 250px;
     max-width: auto;
     border-radius: 50%;
     float: right;
     margin: 20px;
+    border: 3px solid #804000;
 }
 
-
-
 /* Middle row: card & chart */
+
+/* Deed card */
 
 .deeds {
     grid-row: 2;
@@ -56,18 +69,71 @@ body {
     display: flex;
 }
 
-.card {
+.cardDeeds {
   background: beige;
   font-size: 24pt;
   margin: 20px;
   vertical-align: middle;
   width: 300px;
   padding: 5px;
-  border: 1px solid burlywood;
+  border: 3px solid #804000;
   border-radius: 10px;
   flex-grow: 1;
-  align-items: flex-end;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  color: #804000;
+  max-width: 500px;
 }
+
+.title {
+  font-size: 1.4rem;
+  margin: 25px;
+  text-align: center;
+  color: #804000;
+}
+
+.rating {
+  justify-content: space-around;
+  align-content: space-around;
+  display: flex;
+  text-align: center;
+  margin-top: 35px;
+}
+
+.rate {
+  border: 3px solid #804000;
+  border-radius: 500px;
+  height: 65px;
+  width: 65px;
+  margin: 20px;
+  padding: 15px;
+  
+}
+
+.rate:hover {
+  background-color: #006622;
+  color: white;
+  z-index: 100;
+}
+
+
+.submit {
+  border: 3px solid #804000;
+  border-radius: 300px;
+  margin-top: 0px;
+  margin-bottom: 15px;
+  padding: 15px;
+  padding-bottom: 0px; 
+}
+
+.submit:hover {
+  background-color: #b30000;
+  color: white;
+  z-index: 100;
+}
+
+/* Bar chart */
 
 .chart {
     grid-row: 2;
@@ -88,32 +154,34 @@ body {
     text-align: center;
 }
 
-.naughty {
-    background: red;
+.naughtyBar {
+    background: #ff4d4d;
     margin: 3px;
     flex-grow: 1;
     justify-content: center;
     padding: 25px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: bold;
     max-width: 200px;
-    height: 75%;
-    border: 1px solid white;
+    height: 200px;
+    border: 3px solid #b30000;
+    border-radius: 10px;
 }
 
-.nice {
-    background: green;
+.niceBar {
+    background: #c6ffb3;
     margin: 3px;
     flex-grow: 1;
     justify-content: center;
     padding: 25px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: bold;
     max-width: 200px;
-    height: 50%;
-    border: 1px solid white;
+    height: 350px;
+    border: 3px solid #006622;
+    color: #006622;
+    border-radius: 10px;
 }
-
 
 /* Bottom row: List of deeds */
 
@@ -123,5 +191,75 @@ body {
     display: flex;
 }
 
+.cardList {
+  background: beige;
+  font-size: 24pt;
+  margin: 20px;
+  vertical-align: middle;
+  width: 300px;
+  padding: 5px;
+  border: 3px solid #804000;
+  border-radius: 10px;
+  flex-grow: 1;
+  align-items: flex-end;
+}
 
+
+/* login.html */
+
+.container2 {
+	display: grid;
+  grid-template-columns: 1;
+	grid-template-rows: 1fr 2fr 1fr;
+	padding: 15px;
+
+}
+
+.login {
+  background: beige;
+  font-size: 24pt;
+  margin: 20px;
+  margin-left: 275px;
+  width: auto;
+  padding: 5px;
+  border: 3px solid #804000;
+  border-radius: 10px;
+  grid-row: 2;
+  grid-column: 1;
+  justify-self: auto;
+}
+
+.submit2 {
+  border: 3px solid #804000;
+  border-radius: 300px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  margin-left: 175px;
+  padding: 15px;
+  width: 125px;
+  align-items: center;
+}
+
+.submit2:hover {
+  background-color: #b30000;
+  color: white;
+  z-index: 100;
+}
+
+.profile {
+  border: 3px solid #804000;
+  border-radius: 300px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  margin-left: 155px;
+  padding: 15px;
+  width: 170px;
+  align-items: center;
+}
+
+.profile:hover {
+  background-color: #b30000;
+  color: white;
+  z-index: 100;
+}
 
