--- a/client/src/components/pages/Profile/Profile.css
+++ b/client/src/components/pages/Profile/Profile.css
@@ -22,7 +22,7 @@ body {
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 2fr 1fr;
 	padding: 15px;
-  background-image: url("../../../images/wallpaper66.jpg");
+
 }
 
 
