--- a/client/src/components/pages/UserSignup/UserSignup.css
+++ b/client/src/components/pages/UserSignup/UserSignup.css
@@ -211,7 +211,7 @@ body {
   grid-template-columns: 1;
 	grid-template-rows: 1fr 2fr 1fr;
     padding: 15px;
-    background-image: url("../../../images/wallpaper66.jpg");
+  
 
 }
 
